# abstractifier

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
include/: game.h
include/client/draw/: draw_builder.h  font.h  renderer.h  shader.h  window.h
include/client/entity/: client_entity.h
include/client/hud/: hud.h
include/client/input/: input.h
include/client/menu/: menu.h
include/client/menu/element/: button.h  element.h  label.h
include/client/menu/overlay/: overlay.h
include/client/menu/type/: main_menu.h  pause_menu.h
include/client/texture/: texture_manager.h
include/client/world/: client_world.h
include/math/: vectors.h
include/util/: lib.h  object_pool.h
include/world/: bullet.h  enemy.h  entity.h  world.h
lib/glad/include/glad/: gl.h
resource/shaders/: background.frag  block.frag  bullet.frag  hud.frag  player.frag  scale.vert
resource/shaders/entity/: block.frag  bullet.frag  player.frag
resource/shaders/font/: background.frag  background.vert  text.frag  text.vert
resource/shaders/menu/: button.frag  button.vert  outline.frag  outline.vert
resource/shaders/mouse/: mouse.frag
resource/shaders/overlay/: overlay.frag  overlay.vert
src/: game.cpp  launcher.cpp
src/client/draw/: draw_builder.cpp  font.cpp  renderer.cpp  shader.cpp  window.cpp
src/client/entity/: client_entity.cpp
src/client/hud/: hud.cpp
src/client/input/: input.cpp
src/client/menu/: menu.cpp
src/client/menu/element/: button.cpp  element.cpp  label.cpp
src/client/menu/overlay/: overlay.cpp
src/client/menu/type/: main_menu.cpp  pause_menu.cpp
src/client/texture/: texture_manager.cpp
src/client/world/: client_world.cpp
src/math/: vectors.cpp
src/util/: lib.cpp  object_pool.cpp
src/world/: bullet.cpp  enemy.cpp  entity.cpp  world.cpp
